# pyff

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  test_message
pyff/: __init__.py  _version.py  classes.py  directories.py  entrypoints.py  functions.py  imports.py  kitchensink.py  modules.py  packages.py  repositories.py  run.py  statements.py
tests/: test_kitchensink.py  test_pyff.py  test_scenarios.py
tests/package-examples/new/pkg01/: __init__.py
tests/scenarios/: added_class.py  added_decorator.py  added_function.py  added_variable.py  base.py  changed_class_method.py  changed_decorator.py  changed_function_body.py  removed_function.py
tests/test_data/: added_function.py  base.py  changed_function_body.py
tests/unit/: test_classes.py  test_directories.py  test_functions.py  test_imports.py  test_modules.py  test_packages.py  test_repositories.py  test_statements.py
